# Telegram-shop-Physical

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DRY-audit-report.md  FEATURE_CARDS.md  README.md  alembic.ini  bot_cli.py  conftest.py  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  e2e_output.txt  en_keys.json  en_kv.txt  fail_output.txt  full_test2.txt  full_test_output.txt  gen_all_translations.py  gen_output.py  gen_translations.py  insert_translations.py  load_test_data.py  new_tests_output.txt  pyproject.toml  pytest.ini  rebuild.ps1  rebuild.sh  requirements.txt  review-DRY.md  run.py  seed_test_data.py  teardown-clean.ps1  teardown-clean.sh  teardown.ps1  teardown.sh  test-coverage-audit.md  test_output.txt  test_output2.txt  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/snusthai-hub/: .env.example  .gitignore  astro.config.mjs  package.json  tailwind.config.mjs
apps/storefront/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.mjs
bot/: __init__.py  logger_mesh.py  main.py  preflight.py
bot/ai/: customer_executor.py  customer_schemas.py  customer_tool_defs.py  data_parser.py  executor.py  grok_client.py  image_gen.py  prompts.py  schemas.py  tool_defs.py
bot/caching/: __init__.py  cache.py  scheduler.py  stats_cache.py
bot/channels/: __init__.py
bot/communication/: __init__.py  broadcast_system.py
bot/config/: __init__.py  delivery_zones.py  env.py  storage.py  timezone.py
bot/database/: __init__.py  brand_scope.py  dsn.py  integrity.py  main.py
bot/dispatch/: __init__.py  dispatcher.py  eta.py  matching.py
bot/export/: __init__.py  custom_logging.py  customer_csv.py  sales_report.py
bot/filters/: __init__.py  main.py
bot/handlers/: __init__.py  main.py  other.py
bot/i18n/: __init__.py  main.py  strings.py
bot/keyboards/: __init__.py  inline.py
bot/middleware/: __init__.py  brand_context.py  locale.py  rate_limit.py  security.py
bot/monitoring/: __init__.py  dashboard.py  metrics.py  recovery.py
bot/multibot/: __init__.py  instance.py  pool.py
bot/payments/: __init__.py  bitcoin.py  chain_verify.py  crypto_addresses.py  notifications.py  price_feed.py  promptpay.py  refunds.py  slip_verify.py  store_payment.py
bot/platform/: __init__.py  capabilities.py  channels.py  deep_links.py  identity.py  media_ref.py  messaging.py  messenger_router.py  telegram_messenger.py
bot/referrals/: __init__.py  codes.py  invite_card_sheet.py  invite_cards.py
bot/services/: __init__.py  cart.py  catalog_public.py  checkout.py  customer_catalog.py  demo_placeholders.py  dto.py  leads_bookings.py  media_proxy.py  order_query.py  seed_demo_verticals.py  seed_food_demo.py  seed_snus_demo.py  store_admin.py  theme_contrast.py  tickets.py  tickets_web.py  web_auth.py  web_profile.py
bot/states/: __init__.py  broadcast_state.py  category_state.py  goods_state.py  payment_state.py  shop_state.py  user_state.py
bot/tasks/: __init__.py  address_reclaimer.py  file_watcher.py  payment_checker.py  reservation_cleaner.py
bot/utils/: __init__.py  background.py  cart_stub.py  constants.py  coupon_utils.py  currency.py  delivery_types.py  invoice.py  menu_io.py  message_utils.py  modifiers.py  order_codes.py  order_helpers.py  order_status.py  pagination.py  singleton.py  tracking.py  user_utils.py  validators.py
bot/web/: __init__.py  auth_api.py  commerce_api.py  public_api.py
crypto_addresses/: btc_addresses.txt  ltc_addresses.txt  sol_addresses.txt  usdt_sol_addresses.txt
deploy/caddy/: Caddyfile
deploy/tailscale/: README.md
docs/: CARD-01-promptpay-qr-payment.md  CARD-02-gps-delivery-address.md  CARD-03-dead-drop-delivery.md  CARD-04-photo-proof-delivery.md  CARD-05-thai-language-i18n.md  CARD-06-thb-currency.md  CARD-07-thai-address-format.md  CARD-08-menu-modifiers.md  CARD-09-kitchen-delivery-workflow.md  CARD-10-delivery-zones-timeslots.md  CARD-11-cod-thai-localization.md  CARD-12-timezone-bangkok.md  CARD-14-language-picker.md  CARD-15-gps-live-tracking-delivery-chat.md  CARD-17-grok-admin-assistant.md  CARD-18-crypto-payment-verification.md  CARD-21-persistent-cart-stub.md  CLEAR-START.md  Codebase-DRY-report.md  FEATURE-CARDS.md  FEATURE_CARDS.md  MARKETING.md  MASTER-DOCUMENT.md  MASTER-PLAN.md  MENU-SYSTEM.md  ROADMAP.md  SLIP-VERIFICATION-SETUP.md  TESTING.md
docs/Specifications/: AI-CUSTOMER-ASSISTANT.md  BRAND-BRANCH-WEB-CONTENT-MODEL.md  FUNNEL-INSTAGRAM-WEB-TELEGRAM.md  README.md  SNUSTHAI-HUB-MVP.md  UNIFIED-BACKEND-CHANNEL-INTERFACE.md  WEB-INSTAGRAM-STYLE-STOREFRONT.md  WHITE-LABEL-ASTRO-IMPLEMENTATION.md  WHITE-LABEL-OAUTH-TICKETS.md  WHITE-LABEL-SITE-MODES-COMPLIANCE-LEADS.md  _TEMPLATE-FLOW.md
docs/backlog/: CARD-27-input-hardening.md  (+9 more)
memory/: session-2026-04-13-test-coverage.md  session-2026-07-17-storefront-commerce-signoff.md  session-2026-07-18-demo-verticals-signoff.md
migrations/: env.py
scripts/: add_ai_btn.py  check_theme_contrast.py  fetch_demo_stock_images.py  fuzz_seed.py  migrate.py  run_public_api.py  seed_demo.py  seed_site_templates.py  validate_data.py  verify_strings.py
tests/: conftest.py
(+340 files in other folders)
